get, delete training
